--- a/Basic_HTML_and_CSS/Basic_CSS_2.css
+++ b/Basic_HTML_and_CSS/Basic_CSS_2.css
@@ -4,5 +4,5 @@ color: snow;
 background: black;
 font-weight: bold;
 text-align: center;
-
+text-shadow:2px 2px #FF0000; /*text shadow needs the h-shadow and v-shadow*/
 }
