--- a/Paintball Site/CSS/Tigers_Page_CSS.css
+++ b/Paintball Site/CSS/Tigers_Page_CSS.css
@@ -8,3 +8,20 @@ h2 {
 
         text-align: center;
     }
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+    float: left;
+    width: 15.00%;
+    padding: 5px;
+  }
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  div.center{
+      text-align: center;
+  }
