--- a/Paintball Site/CSS/Tigers_Page_CSS.css
+++ b/Paintball Site/CSS/Tigers_Page_CSS.css
@@ -25,3 +25,9 @@ h2 {
   div.center{
       text-align: center;
   }
+
+.Background{
+
+    background-image: url('./Images/institute_hall.jpg');
+    background-size: cover;
+}
