--- a/Paintball Site/CSS/Tigers_Page_CSS.css
+++ b/Paintball Site/CSS/Tigers_Page_CSS.css
@@ -28,7 +28,7 @@ h2 {
 
 .Background{
 
-    background-image: url("./Images/Team.jpg");
+    background-image:url(../Images/institute_hall.jpg);
     background-size: cover;
 
 }
