--- a/Paintball Site/PaintballSite.css
+++ b/Paintball Site/PaintballSite.css
@@ -45,12 +45,12 @@ div.center{
 
 h1{
 position:relative;
-color:orange;  
+color:orange ;  
 font-size: 100px;
 line-height: .01;
 text-align: center;
 }
 
-iframe{
+iframe, a{
   position: relative;
 }
