--- a/Paintball Site/PaintballSite.css
+++ b/Paintball Site/PaintballSite.css
@@ -17,6 +17,8 @@ div.center{
   text-align: center;
 }
 
+
+/* START Background pictures*/
 .Background2{
      background-size: cover; 
      background-position: center center; 
@@ -55,7 +57,7 @@ left: 0px;
 opacity: 0.60;
 }
 
-
+/* END Background Pictures*/
 
 h1{
 position:relative;
@@ -71,36 +73,87 @@ h2{
   text-align: center;
 }
 
-iframe, a{
+iframe, a, p{
   position: relative;
 }
 
 
-.container{
-border: oldlace;
-border-radius: 25%;
-float:none;
+
+
+
+.container .squares:nth-child(-n+4){
+  
+  float:inline-start;
+  width: 100px;
+  height: 100px;
+  margin: 5px;
+  border-radius: 25%;
+  cursor: pointer;
+  transition: transform .5s ease-in-out;
+  position: relative;
+  
+  }
+
+  .squares:nth-child(-n+4) p{
+    color:cyan;
+    font-family: "helvetica Neue", Arial, Helvetica, sans-serif ;
+    font-size: 1.5em;
+    font-weight: 900;
+    text-align:center;
+    vertical-align: middle;
+    margin: 0%;
+    text-shadow: 2px 1px 4px rgba(0,0,0,0.8);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+
+    .squares:nth-child(1){
+      /*background-image: url(./Images/paw-icon.png);*/
+      background-size: cover;
+  }
+  
+  .squares:nth-child(2){
+       
+      /*background-image: url(./Images/splat-icon.png);*/ 
+      background-size: cover;
+      
+  }
+  
+  .squares:nth-child(3){
+    
+      /*background-image: url(./Images/tiger-icon.png);*/
+      background-size: cover;
+  }
+  
+  /*HOVER EFFECTS*/
+
+.container .squares:nth-child(-n+4):hover{
+  background-image: url(./Images/Black_Splat.jpg);
+  transform: scale(1.5);
+  animation-name: race;
+  animation-duration: 2.5s;
+  animation-timing-function: cubic-bezier(2.5,.2,.3,2);
+}
+/*
+.squares:nth-child(1):hover{
+  
 }
 
-.container:nth-child(-n+3){ 
-  background-repeat: no-repeat;
-  margin: 7px;
-  width: 50px;
-  height: 50px;
+
+.squares:nth-child(2):hover{
+  
+}
+
+
+.squares:nth-child(3):hover{
 
 }
 
-.container:nth-child(1){
-  background-image: url(./Images/splat-icon.png);
-  background-size: cover; 
-}
+.squares:nth-child(4):hover{
 
-.container:nth-child(2){
-  background-image: url(./Images/paw-icon.png);
-  background-size: cover; 
 }
+*/
 
-.container:nth-child(3){
-  background-image: url(./Images/tiger-icon.png);
-  background-size: cover;
-}
