--- a/Paintball Site/ImageManipTest.css
+++ b/Paintball Site/ImageManipTest.css
@@ -16,22 +16,36 @@ p {
         border-radius: 50px;
         /*padding: 1px; /*Remove these to remove orange border*/
         /*border: 1px solid #021a40;/*Remove these to remove orange border*/
-        background-color: orange;
+        
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
     }
     
 .photo-container {
     
         text-align: center;
-        margin: 15px auto; /* the first value dicatates top and bottom, and the second is left/right. Auto will center in relation to the left and right*/
+        position:relative;        
         width: 150px;
         height: 100px;
+        margin: 12px auto;
+        display: inline-table;
+    }
+
+    .container{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -10%);
+        
         
     }
     
+.flexwrap{
+    display:flex;
+    width: 100%;
+}    
 .photo-container img {
     
-        max-width: 200%; /*this works in relation to above. It states the image will can never get bigger than the width and height stated above */
+        max-width: 100%; /*this works in relation to above. It states the image will can never get bigger than the width and height stated above */
         width: 150px;
         height: 100px;
         
@@ -58,7 +72,8 @@ p {
         margin-top: 30%;
         line-height: 30px; /**/
         padding-bottom: 20px;
-    }
+        
+  }
     
     /*Photo Overlay Transitions*/
     
