--- a/Project/shared.css
+++ b/Project/shared.css
@@ -348,3 +348,12 @@ section{
 
 
   }
+
+  #footer{
+    background-color: rgba(100,65,0,.3);
+    color: #000;    
+    text-shadow: 2px 2px 8px 0 (0,0,0,0.4);
+    padding: 20px 50px 20px 50px;
+    text-align: right;
+
+  }
