--- a/Project/animations.css
+++ b/Project/animations.css
@@ -65,10 +65,20 @@
 }
 
 .photo-overlay{
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    justify-content: center; /* For centering text inside photo-overlay */
+    align-items: center;
+    background: rgba(0,0,0, .5);
     opacity: 0;
-    transition: opacity .5s;
-    border-radius: 10px;
     cursor: pointer;
+    
 }
 
 .photo-overlay:hover {
