--- a/Paintball Site/SocialMedia.css
+++ b/Paintball Site/SocialMedia.css
@@ -233,6 +233,14 @@
  border-radius: 3px;
 }
 
+#Typing_Video {
+  position: fixed; /* This fixes the video to the page */
+  right: 0; /* This ensures there is no space between the edge of the video and the edge of the page */
+  bottom: 0; /* This ensures no space between the bottom of the video and the bottom of the page */
+  min-width: 100%; /* This ensures the video is displayed across the full width of the page */
+  z-index: -1; /* This places the video behind the other elements on the page */
+}
+
 
 
 
