--- a/Paintball Site/Home Page/css/styles.css
+++ b/Paintball Site/Home Page/css/styles.css
@@ -11641,7 +11641,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("../assets/img/bg-signup.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url(../img/brandt.JPG);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11866,13 +11866,11 @@ body {
     }
     
 .white-head{
-    
-        color:cyan;
-        margin-top: 30%;
-        
-        
-        line-height: 30px; /**/
-        padding-bottom: 20px;
+    color:cyan;
+    margin-top: 30%;
+    text-decoration: none;  
+    line-height: 30px; /**/
+    padding-bottom: 20px;
         
   }
   .white-head1{
@@ -11880,6 +11878,13 @@ body {
     line-height: 30px; /**/
     padding-bottom: 20px;
     margin-top: 15%;
+  }
+
+  .white-head2{
+    color: cyan;
+    line-height: 30px; /**/
+    padding-bottom: 20px;
+    padding-top: 50%;
   }
   
 
