Updated home page

--- a/Paintball Site/Donate/css/styles.css
+++ b/Paintball Site/Donate/css/styles.css
@@ -11429,3 +11429,7 @@ video.bg-video {
     width: auto;
   }
 }
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+  background-color: orange !important;
+}
