Updated colors for Navbar

--- a/Paintball Site/Donate/css/styles.css
+++ b/Paintball Site/Donate/css/styles.css
@@ -3953,7 +3953,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #224444;
+  color: darkorange;
 }
 .nav-link.disabled {
   color: #6c757d;
