Updated Home Page Nav Tabs

--- a/Paintball Site/Home Page/css/styles.css
+++ b/Paintball Site/Home Page/css/styles.css
@@ -11538,15 +11538,15 @@ body {
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
+    color: darkorange;
   }
   #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
+    color: darkorange;
   }
   
   /*This changes the bottom line to orange*/
   #mainNav.navbar-shrink .nav-link.active {
-    color: #64a19d;
+    color: darkorange;
     outline: none;
     border-bottom: 0.25rem solid darkorange;
   }
