--- a/Official Site/Test/css/styles.css
+++ b/Official Site/Test/css/styles.css
@@ -601,8 +601,7 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: 100%;
-  object-fit:cover;
+  height: auto;
 }
 
 .img-thumbnail {
@@ -11592,7 +11591,6 @@ header.masthead .masthead-heading {
   border: 7px solid #e9ecef;
   border-radius: 100%;
   background-color: #ffc800;
-  overflow: hidden;
 }
 .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
   font-size: 10px;
