--- a/Official Site/css/styles_timeline.css
+++ b/Official Site/css/styles_timeline.css
@@ -3032,12 +3032,12 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #ffc800;
+  background-color: darkorange ;
   border-color: #ffc800;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #d9aa00;
+  background-color: orange;
   border-color: #cca000;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
@@ -4057,6 +4057,7 @@ textarea.form-control-lg {
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+  
 }
 .navbar-nav {
   display: flex;
@@ -11368,7 +11369,7 @@ p {
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #ffc800;
+  color: darkorange !important;
 }
 
 @media (min-width: 992px) {
@@ -11411,7 +11412,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../img/Casey.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -11720,9 +11721,9 @@ header.masthead .masthead-heading {
   height: 2.75rem;
 }
 
-section#contact {
+section#services {
   background-color: #212529;
-  background-image: url("../assets/img/map-image.png");
+  background-image: url("../img/map-image.png");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -11780,3 +11781,8 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+
+#orange{
+
+  color: darkorange !important;
+}
