--- a/Official Site/css/styles_timeline.css
+++ b/Official Site/css/styles_timeline.css
@@ -1382,6 +1382,7 @@ progress {
   .col-lg-4 {
     flex: 0 0 auto;
     width: 33.33333333%;
+    height: fit-content;
   }
 
   .col-lg-5 {
@@ -11466,7 +11467,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 200, 0, 0.9);
+  background: darkorange;
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -11785,4 +11786,12 @@ section#contact form#contactForm :-ms-input-placeholder {
 #orange{
 
   color: darkorange !important;
+}
+
+.img-fluid-custom{
+
+  max-width: 100%;
+  height: 15vw !important;
+  object-fit:cover;
+
 }
