--- a/Official Site/css/styles_home.css
+++ b/Official Site/css/styles_home.css
@@ -11647,7 +11647,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url(../img/brandt.JPG);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url(../img/Brandt2.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
