--- a/Official Site/css/styles_timeline.css
+++ b/Official Site/css/styles_timeline.css
@@ -11415,9 +11415,10 @@ header.masthead {
   color: #fff;
   background-image: url("../img/Casey.jpg");
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-position: center center;
   background-size: cover;
+
 }
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
