Updated Video on Timeline

--- a/Official Site/css/styles_timeline.css
+++ b/Official Site/css/styles_timeline.css
@@ -11880,3 +11880,10 @@ section#contact form#contactForm :-ms-input-placeholder {
 #UL #LI:nth-child(4):hover #SPAN{
   background:  #55acee;
 }
+
+.THist{
+
+  color: whitesmoke !important;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
