--- a/Official Site/css/styles_timeline.css
+++ b/Official Site/css/styles_timeline.css
@@ -11919,12 +11919,12 @@ section#contact form#contactForm :-ms-input-placeholder {
   /* The Close Button */
   .close {
     color: orange;
-    position: relative;
+    position:fixed;
     top: 10px;
     right: 25px;
     font-size: 35px;
     font-weight: bold;
-    z-index: 2000;
+    z-index: 4000;
   }
   
   .close:hover,
@@ -11955,6 +11955,7 @@ section#contact form#contactForm :-ms-input-placeholder {
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
+    background-color: darkorange;
   }
   
   /* Position the "next button" to the right */
@@ -11966,16 +11967,27 @@ section#contact form#contactForm :-ms-input-placeholder {
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover,
   .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: black;
   }
   
-  /* Number text (1/3 etc) */
+  /* Number text (1/5 etc) */
   .numbertext {
     color: cyan;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
+    font: bold;
+  }
+
+  .title{
+    color: cyan;
+    font-size: 20px;
+    padding: 8px 12px;
+    position: absolute;
+    right: 40px;
+    top: 0;
+    text-shadow: 2px 2px 10px 0 rgba(0,0,0,0.5);
   }
   
   /* Caption text */
